k8s/probe-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: probe-service
  namespace: default
  labels:
    app: probe-server
spec:
  type: ClusterIP
  ports:
  - port: 9080
    targetPort: 9080
    name: http
  - port: 9443
    targetPort: 9443
    name: https
  selector:
    app: probe-server
