k8s/probe-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: probe-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/proxy-ssl-verify: "off"
    external-dns.alpha.kubernetes.io/controller: "ignore"
spec:
  ingressClassName: nginx
  rules:
  - host: probe.siwko.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: probe-service
            port:
              number: 9443
